--- a/src/components/Subtotal.css
+++ b/src/components/Subtotal.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   width: 300px;
-  height: 100%;
+  height: 200px;
   padding: 20px;
   background-color: white;
 }
