--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -28,8 +28,9 @@
   background: #f0c14b;
   border: 1px solid;
   margin-top: 10px;
-  border-color: #a88734 #9c7e31 #846a29;
+  border-color: hsl(43, 53%, 43%) #9c7e31 #846a29;
   color: #111;
+  cursor: pointer;
 }
 
 .product__price {
