--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -16,8 +16,8 @@
 .header__searchIcon{
     padding: 5px;
     height: 22px !important;
-    background-color: #cd9042;
-
+    background-color: #FEBD69;
+    border-radius: 0 3px 3px 0;
 }
 .header__search{
     display: flex;
@@ -30,6 +30,7 @@
     padding: 10px;
     border: none;
     width: 100%;
+    border-radius: 3px 0 0 3px ;
 }
 .header__option {
     display: flex;
